--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,12 @@ node_js:
 script:
   - "npm run build"
   - "npm run test:nowatch"
+before_deploy:
+  ##  - gem install faraday-patron -v 1.0.0
+  ##  - gem install bundler -v 1.0.10
+  - rvm requirements
+  - rvm install 2.6
+  - rvm $(travis_internal_ruby) --fuzzy do ruby -S gem install faraday -v 1.8.0
 
 deploy:
   provider: heroku
