--- a/package.json
+++ b/package.json
@@ -11,20 +11,22 @@
     "@mui/material": "^5.4.2",
     "@mui/styles": "^5.4.2",
     "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.26.0",
-    "notistack": "^2.0.3",
-    "prop-types": "^15.8.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6",
-    "react-scripts": "5.0.0",
-    "redux": "^4.1.2",
+    "@testing-library/react": "^9.4.0",
+    "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.21.1",
+    "formik": "^2.2.9",
+    "notistack": "^1.0.10",
+    "prop-types": "^15.7.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^5.0.0",
+    "redux": "^4.0.5",
     "redux-mock-store": "^1.5.4",
-    "redux-thunk": "^2.4.1",
+    "redux-thunk": "^2.3.0",
     "serve": "^13.0.2",
-    "web-vitals": "^2.1.4"
+    "yup": "^0.32.9"
   },
   "scripts": {
     "dev": "react-scripts start",
