--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@mui/icons-material": "^5.4.2",
     "@mui/lab": "^5.0.0-alpha.70",
-    "@mui/material": "^5.4.2",
-    "@mui/styles": "^5.4.2",
+    "@mui/material": "5.4.4",
+    "@mui/styles": "^5.4.4",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
